--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.4",
+  "version": "0.9.9",
   "description": "Scripting environment for Inexor.",
   "scripts": {
+    "postinstall": "node postinstall.js",
+    "preuninstall": "node preuninstall.js",
     "start": "node server/index.js --profile  $npm_package_config_profile",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
@@ -33,23 +35,6 @@
     "yarn": ">=1.3.2"
   },
   "dependencies": {
-    "@inexorgame/api": "file:./server/api/",
-    "@inexorgame/console": "file:./src/console/",
-    "@inexorgame/context": "file:./src/context/",
-    "@inexorgame/entities": "file:./src/entities/",
-    "@inexorgame/gameclient": "file:./src/gameclient/",
-    "@inexorgame/gameserver": "file:./src/gameserver/",
-    "@inexorgame/instances": "file:./src/instances/",
-    "@inexorgame/interfaces": "file:./src/interfaces/",
-    "@inexorgame/logger": "file:./server/util/logger/",
-    "@inexorgame/logging": "file:./src/logging/",
-    "@inexorgame/media": "file:./src/media/",
-    "@inexorgame/path": "file:./server/util/path/",
-    "@inexorgame/profiles": "file:./src/profiles/",
-    "@inexorgame/releases": "file:./src/releases/",
-    "@inexorgame/tree": "file:./src/tree/",
-    "@inexorgame/treeclient": "file:./src/treeclient",
-    "@inexorgame/types": "file:./src/types/",
     "circular-json": "^0.4.0",
     "cors": "^2.8.3",
     "express": "^4.15.2",
@@ -57,7 +42,6 @@
     "express-uws": "^3.0.0",
     "figlet": "^1.2.0",
     "helmet": "^3.9.0",
-    "isarray": "^2.0.4",
     "npid": "^0.4.0",
     "portscanner": "^2.1.1",
     "prettyjson": "^1.2.1",
@@ -65,7 +49,8 @@
     "tomlify": "^0.2.0",
     "wait-on": "^2.1.0",
     "xdg-basedir": "^3.0.0",
-    "yargs": "^10.1.0"
+    "yargs": "^10.1.0",
+    "shelljs": "0.8.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -80,11 +65,31 @@
     "nsp": "^3.2.1",
     "tui-jsdoc-template": "^1.2.2"
   },
+  "fileDependencies": {
+    "@inexorgame/api": "./server/api/",
+    "@inexorgame/console": "./src/console/",
+    "@inexorgame/context": "./src/context/",
+    "@inexorgame/entities": "./src/entities/",
+    "@inexorgame/gameclient": "./src/gameclient/",
+    "@inexorgame/gameserver": "./src/gameserver/",
+    "@inexorgame/instances": "./src/instances/",
+    "@inexorgame/interfaces": "./src/interfaces/",
+    "@inexorgame/logger": "./server/util/logger/",
+    "@inexorgame/logging": "./src/logging/",
+    "@inexorgame/media": "./src/media/",
+    "@inexorgame/path": "./server/util/path/",
+    "@inexorgame/profiles": "./src/profiles/",
+    "@inexorgame/releases": "./src/releases/",
+    "@inexorgame/tree": "./src/tree/",
+    "@inexorgame/treeclient": "./src/treeclient",
+    "@inexorgame/types": "./src/types/"
+  },
   "config": {
     "profile": "client"
   },
   "private": false,
   "resolutions": {
-    "hoek": ">=5.0.3"
+    "hoek": ">=5.0.3",
+    "isarray": ">=2.0.4"
   }
 }
