--- a/server/api/package.json
+++ b/server/api/package.json
@@ -22,5 +22,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0"
   },
-  "private": "true"
+  "private": "true",
+  "dependencies": {
+    "bunyan": "^1.8.12"
+  }
 }
