--- a/src/interfaces/package.json
+++ b/src/interfaces/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "nodegit": "^0.20.3",
     "progress": "^2.0.0",
-    "toml": "^2.3.3"
+    "toml": "^2.3.3",
+    "bunyan": "^1.8.12",
+    "express": "^4.16.2"
   }
 }
