--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,3 @@
 interfaces/
 docs/
-node_modules/**
-src/*/node_modules/*
-server/api/node/modules/*
-server/util/path/node_modules/*
-server/util/logger/node_modules/*
-
+node_modules
