--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,16 +7,16 @@ environment:
 install:
   # Get the latest stable version of Node.js
   - ps: Install-Product node $env:nodejs_version
-  - npm install
+  - yarn install
 
 # Post-install test scripts.
 test_script:
   # Output useful info for debugging.
   - node --version
-  - npm --version
+  - yarn --version
   # run tests
-  - npm test
-  - npm run lint
+  - yarn test
+  - yarn run lint
 
 # Don't actually build.
 build: off
