--- a/src/tree/package.json
+++ b/src/tree/package.json
@@ -24,5 +24,8 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "private": "true"
+  "dependencies": {
+    "circular-json": "~0.5.1"
+  },
+  "private": "true",
 }
