enhance(tools): Add yarn run depcheck
yarn run depcheck will do:
* check for required(modules) which are NOT in package.json
* packages listed in package.json which are nowhere required

Right now it can't exclude our private inexorgame modules, so errors because of our private inexorgame modules can and HAVE TO be ignored.

--- a/server/api/package.json
+++ b/server/api/package.json
@@ -20,10 +20,8 @@
   "homepage": "https://github.com/inexorgame/inexor-flex#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
-  },
-  "private": "true",
-  "dependencies": {
+    "express": "^4.14.0",
     "bunyan": "^1.8.12"
-  }
+  },
+  "private": "true"
 }
