--- a/src/media/package.json
+++ b/src/media/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "nodegit": "^0.20.3",
-    "progress": "^2.0.0"
+    "progress": "^2.0.0",
+    "toml": "^2.3.2",
+    "mkdirp": "^0.5.1"
   },
   "private": "true"
 }
