--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.12",
+  "version": "0.9.13",
   "description": "Scripting environment for Inexor.",
   "scripts": {
     "postinstall": "node postinstall.js",
@@ -14,7 +14,8 @@
     "dev": "node server/index.js --profile=devenv",
     "server": "node server/index.js --profile=server",
     "shell": "node inexor.js shell",
-    "nsp": "nsp check"
+    "nsp": "nsp check",
+    "depcheck": "node depcheck.js"
   },
   "bin": {
     "inexor-flex": "inexor.js"
@@ -35,20 +36,7 @@
     "yarn": ">=1.3.2"
   },
   "dependencies": {
-    "circular-json": "^0.4.0",
-    "cors": "^2.8.3",
-    "express": "^4.15.2",
-    "express-ipfilter": "^0.3.1",
-    "express-uws": "^3.0.0",
-    "figlet": "^1.2.0",
-    "helmet": "^3.9.0",
-    "npid": "^0.4.0",
-    "portscanner": "^2.1.1",
-    "prettyjson": "^1.2.1",
-    "toml": "^2.3.2",
-    "tomlify": "^0.2.0",
     "wait-on": "^2.1.0",
-    "xdg-basedir": "^3.0.0",
     "yargs": "^10.1.0",
     "shelljs": "0.8.1"
   },
@@ -63,10 +51,12 @@
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0",
     "nsp": "^3.2.1",
-    "tui-jsdoc-template": "^1.2.2"
+    "tui-jsdoc-template": "^1.2.2",
+    "dependency-check": "3.0.0"
   },
   "fileDependencies": {
     "@inexorgame/api": "./server/api/",
+    "@inexorgame/server": "./server/",
     "@inexorgame/console": "./src/console/",
     "@inexorgame/context": "./src/context/",
     "@inexorgame/entities": "./src/entities/",
@@ -81,7 +71,7 @@
     "@inexorgame/profiles": "./src/profiles/",
     "@inexorgame/releases": "./src/releases/",
     "@inexorgame/tree": "./src/tree/",
-    "@inexorgame/treeclient": "./src/treeclient",
+    "@inexorgame/treeclient": "./src/treeclient/",
     "@inexorgame/types": "./src/types/"
   },
   "config": {
