--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "@inexorgame/profiles",
-  "version": "1.0.1",
-  "description": "Profile management",
+  "name": "@inexorgame/server",
+  "version": "1.0.0",
+  "description": "Inexor Flex Server",
   "main": "index.js",
+  "author": "The Inexor Team",
+  "license": "Zlib",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/inexorgame/inexor-flex.git"
   },
   "keywords": [
-    "inexor"
+    "inexor",
+    "path"
   ],
-  "author": "The Inexor Team",
-  "license": "Zlib",
   "bugs": {
     "url": "https://github.com/inexorgame/inexor-flex/issues"
   },
@@ -20,8 +21,12 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
-    "toml": "^2.3.2",
-    "tomlify": "^0.2.0"
+    "portscanner": "^2.1.1",
+    "cors": "^2.8.3",
+    "express": "^4.15.2",
+    "express-ipfilter": "^0.3.1",
+    "express-uws": "^3.0.0",
+    "helmet": "^3.9.0"
   },
   "private": "true"
 }
