--- a/src/instances/package.json
+++ b/src/instances/package.json
@@ -13,7 +13,9 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
-    "grpc": "^1.9.1"
+    "grpc": "^1.9.1",
+    "toml": "^2.3.2",
+    "tomlify": "^0.2.0"
   },
   "private": "true"
 }
