--- a/src/releases/package.json
+++ b/src/releases/package.json
@@ -22,7 +22,8 @@
     "follow-redirects": "^1.2.3",
     "fs-extra": "^5.0.0",
     "progress": "^2.0.0",
-    "semver": "^5.4.1"
+    "semver": "^5.4.1",
+    "toml": "^2.3.2"
   },
   "private": "true"
 }
