--- a/src/tree/package.json
+++ b/src/tree/package.json
@@ -27,5 +27,11 @@
   "dependencies": {
     "circular-json": "~0.5.1"
   },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-iterator": "^1.1.4",
+    "jsdoc": "^3.5.5",
+    "mocha": "^3.2.0"
+  },
   "private": "true"
 }
