--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "express": "^4.15.2",
     "express-ipfilter": "^0.3.1",
     "express-uws": "^3.0.0",
-    "helmet": "^3.9.0"
+    "helmet": "^3.9.0",
+    "yargs": "^10.1.0"
   },
   "private": "true"
 }
