--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ test_script:
   - node --version
   - yarn --version
   # run tests
-  - yarn test
+  # - yarn test
   - yarn run lint
 
 # Don't actually build.
