--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/index.js --profile  $npm_package_config_profile",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
-    "test": "mocha \"src/*/test/*.js\" \"server/*/*/test/*.js\" --harmony",
+    "test": "mocha \"src/!(node_modules)/test/*.js\" \"server/test/*.js\" \"server/!(node_modules)/!(node_modules)/test/*.js\" --harmony",
     "docs": "jsdoc -c .jsdoc.json",
     "lint": "eslint .",
     "dev": "node server/index.js --profile=devenv",
