fix(yarn): yarn stop and yarn restart

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "postinstall": "node postinstall.js",
     "preuninstall": "node preuninstall.js",
     "start": "node server/index.js --profile  $npm_package_config_profile",
-    "stop": "./inexor flex shutdown",
-    "restart": "./inexor flex restart",
+    "stop": "./inexor.js flex shutdown",
+    "restart": "./inexor.js flex restart",
     "test": "mocha \"src/!(node_modules)/test/*.js\" \"server/test/*.js\" \"server/!(node_modules)/!(node_modules)/test/*.js\" --harmony",
     "docs": "jsdoc -c .jsdoc.json",
     "lint": "eslint .",
