--- a/config/devenv/instances.toml
+++ b/config/devenv/instances.toml
@@ -7,9 +7,9 @@ type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
 # The semantic release range string to select a release.
-versionRange = "0.x"
+versionRange = "compile"
 # The release channel or empty to accept all
-channelSearch = "*"
+channelSearch = "local"
 autostart = false
 autoconnect = false
 autorestart = false
@@ -19,9 +19,9 @@ type = "client"
 name = "Default production client"
 description = "Badly Configurated Clients Inc. proudly presents your first Inexor Client"
 # The semantic release range string to select a release.
-versionRange = "0.x"
+versionRange = "compile"
 # The release channel or empty to accept all
-channelSearch = "*"
+channelSearch = "local"
 autostart = false
 autoconnect = false
 autorestart = false
