--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 environment:
   matrix:
     - nodejs_version: "8"
-    - nodejs_version: "9"
+#    - nodejs_version: "10"
 
 # Install scripts. (runs after repo cloning)
 install:
