--- a/package.json
+++ b/package.json
@@ -36,23 +36,23 @@
     "yarn": ">=1.3.2"
   },
   "dependencies": {
+    "shelljs": "0.8.1",
     "wait-on": "^2.1.0",
-    "yargs": "^10.1.0",
-    "shelljs": "0.8.1"
+    "yargs": "^10.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-iterator": "^1.1.4",
     "debug": "^3.1.0",
+    "dependency-check": "3.1.0",
     "eslint": "^4.18.0",
     "eslint-plugin-security": "^1.4.0",
     "jsdoc": "^3.5.5",
     "mocha": "^5.0.1",
     "mocha-junit-reporter": "^1.17.0",
     "nsp": "^3.2.1",
-    "tui-jsdoc-template": "^1.2.2",
-    "dependency-check": "3.0.0"
+    "tui-jsdoc-template": "^1.2.2"
   },
   "fileDependencies": {
     "@inexorgame/api": "./server/api/",
